<resources>
    <string name="app_name">Muras</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="library">Библиотека</string>
    <string name="search">Поиск</string>
    <string name="read">Читаю сейчас</string>
    <string name="profile">Аккаунт</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile">Изменить профиль</string>
    <string name="gmail">gmail.com</string>
    <string name="full_name">Full Name</string>
    <string name="night_theme">Темная тема</string>
    <string name="notifications">Уведомления</string>
    <string name="exit">Выйти</string>
    <string name="read_books">Прочитанные</string>
    <string name="favorites">Избранное</string>
    <string name="author">Автор</string>
    <string name="name">Название</string>
    <string name="_0">0</string>
    <string name="star">Star</string>
    <string name="recent_request">Недавние запросы</string>
    <string name="recently_watched">Недавно смотрели</string>
    <string name="title">Подборка книг от Айтматова</string>
    <string name="russian_language">Русский язык</string>
    <string name="kyrgyz_language">Кыргыз Тили</string>
    <string name="your_request">Ваш запрос</string>
    <string name="we_well_answer">Мы ответим вам при первой же возможности</string>
    <string name="tell_me_in_detail">Расскажите детально с какой проблемой вы столкнулись</string>
    <string name="send">Отправить</string>
    <string name="change_photo">Сменить фото</string>
    <string name="your_data">Ваши данные</string>
    <string name="first_name">Имя</string>
    <string name="second_name">Фамилия</string>
    <string name="save">Сохранить</string>
    <string name="change">Изменить</string>
    <string name="change_password">Изменить пароль</string>
    <string name="old_password">Старый пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="new_password_return">Введите пароль снова</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="date">Date</string>
</resources>