<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/button_style_settings_profile"
    android:padding="10dp"
    android:layout_marginEnd="12dp"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_book"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        app:layout_constraintStart_toStartOf="@id/iv_book"
        app:layout_constraintTop_toBottomOf="@id/iv_book"
        android:id="@+id/tv_name_book"
        android:fontFamily="@font/ff_roboto_regular"
        android:text="@string/name"
        android:textSize="16sp"
        android:layout_marginTop="4dp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        app:layout_constraintEnd_toEndOf="@id/iv_book"
        app:layout_constraintTop_toBottomOf="@id/tv_name_book"
        android:id="@+id/tv_author_book"
        android:fontFamily="@font/ff_roboto_regular"
        android:text="@string/author"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        android:textColor="@color/gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <ImageView
        app:layout_constraintTop_toBottomOf="@id/tv_name_book"
        android:id="@+id/iv_star"
        android:src="@drawable/ic_star"
        android:layout_width="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/tv_name_book"
        android:layout_height="wrap_content"
        android:contentDescription="@string/star" />

    <TextView
        app:layout_constraintBottom_toBottomOf="@id/iv_star"
        app:layout_constraintTop_toTopOf="@id/iv_star"
        app:layout_constraintStart_toEndOf="@id/iv_star"
        android:id="@+id/tv_rating"
        android:textSize="14sp"
        android:fontFamily="@font/ff_roboto_regular"
        android:textColor="@color/yellow"
        android:text="@string/_0"
        android:layout_marginStart="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>