<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.ui.fragments.profile.ProfileFragment">

    <ImageView
        android:layout_margin="32dp"
        android:src="@drawable/ic_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="38dp"
        android:id="@+id/iv_settings"
        android:layout_height="38dp"/>

    <LinearLayout
        android:id="@+id/profile_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_settings"
        android:orientation="vertical"
        android:paddingHorizontal="32dp"
        android:paddingVertical="12dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/profile_image"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:layout_gravity="center"
            app:cardCornerRadius="40dp">

            <ImageView
                android:id="@+id/iv_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/profile"
                android:src="@color/black" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/ff_roboto_regular"
            android:text="@string/full_name"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_gmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/ff_roboto_medium"
            android:text="@string/gmail"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_layout"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginTop="12dp"
        android:layout_height="wrap_content">

        <Button
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:text="@string/favorites"
            android:textSize="16sp"
            android:backgroundTint="@color/orange"
            android:paddingHorizontal="44dp"
            android:fontFamily="@font/ff_roboto_medium"
            android:background="@drawable/button_style_settings_profile_left_radius"
            android:layout_width="wrap_content"
            android:layout_height="40dp"/>

        <Button
            android:textColor="@color/orange"
            android:textAllCaps="false"
            android:text="@string/read_books"
            android:textSize="16sp"
            android:paddingHorizontal="33.3dp"
            android:fontFamily="@font/ff_roboto_medium"
            android:background="@drawable/button_style_settings_profile_right_radius"
            android:layout_width="wrap_content"
            android:layout_height="40dp"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="12dp"
        tools:listitem="@layout/item_favorites"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>